Update match ready for getting guide id
